# OldenEraRMGPython

./: .gitignore  README.md  pyproject.toml  ruff.toml
data/content_lists/: basic_content_lists.json  basic_content_lists_variants_table.json  custom_content_lists_blitz.json  custom_content_lists_chosen_one.json  custom_content_lists_exodus.json  custom_content_lists_harmony.json  custom_content_lists_helltide.json  custom_content_lists_infinity.json  custom_content_lists_jebus_cross.json  custom_content_lists_last_fortress.json  custom_content_lists_massacre.json  custom_content_lists_shamrock.json  custom_content_lists_sprint.json  custom_content_lists_symphony.json  custom_content_lists_universe.json  generator_content_lists.json  test_content_lists.json
data/content_pools/: basic_pools_default.json  basic_pools_resources.json  default_content_pools.json  generator_content_pools.json  template_anarchy_pools.json  template_arcade_pools.json  template_christmas_tree_pools.json  template_conquest_pools.json  template_crossroads_pools.json  template_diamond_pools.json  template_diplomacy_pools.json  template_expanse_pools.json  template_eye_pools.json  template_hallway_pools.json  template_ikarus_pools.json  template_jebus_outcast_pools.json  template_kerberos_pools.json  template_king_hill_pools.json  template_madness_pools.json  template_maneuvers_pools copy.json  template_maze_pools.json  template_memory_lane_pools.json  template_mini_nosta_pools.json  template_miracle_pools.json  template_mlyn_pools.json  (+24 more)
olden_era/: connection_builder.py  utils.py  zone_builder.py
(+111 files in other folders)
