[project]
name = "olden_era"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic~=2.13",
    "loguru~=0.7.3",
    "matplotlib~=3.10.9",
    "networkx~=3.6.1",
    "numpy~=2.4.4"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["olden_era"]
